[project]
name = "faceit-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faceit>=0.1.4",
    "fastapi>=0.115.13",
    "ipykernel>=6.29.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
]
